THRIFT-5417: Fix Lua compiler omitting default values in Lua service functions Client: Lua